# django-push-notifications

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  ACKNOWLEDGEMENTS.md  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.rst  TODO.md  admin.py  api.py  dev.requirements.txt  gcm.py  models.py  pip-selfcheck.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_settings.py  test_urls.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml  test.yml
docs/: APNS.rst  FCM.rst  WebPush.rst
push_notifications/: __init__.py  admin.py  api.py  apns.py  apns_async.py  apns_errors.py  apps.py  checks.py  compat.py  django_rest_api.py  dynamic.py  enums.py  exceptions.py  fcm.py  fields.py  firefox.py  gcm.py  modeldict.py  models.py  settings.py  utils.py  webpush.py  wns.py
push_notifications/api/: __init__.py  rest_framework.py  tastypie.py
push_notifications/conf/: __init__.py  app.py  appmodel.py  base.py  legacy.py
push_notifications/management/commands/: prune_devices.py
push_notifications/migrations/: 0001_initial.py  0002_auto_20150329_2211.py  0002_auto_20151125_1555.py  0002_auto_20160106_0850.py  0002_auto__add_field_apnsdevice_date_created__add_field_gcmdevice_date_created.py  0002_auto__chg_field_apnsdevice_user__chg_field_gcmdevice_user.py  0002_auto__del_unique_gcmdevice_registration_id.py  0002_python3_help_text.py  0003_applicationmodel.py  0003_auto__chg_field_gcmdevice_device_id.py  0003_wnsdevice.py  0004_auto_20160106_0850.py  0004_fcm.py  0004_fcmdevice.py  0004_firefoxdevice.py  0005_apns_registration_id.py  0005_applicationid.py  0005_auto_20160909_1035.py  0005_auto_20161117_1306.py  0005_multiple_apps.py  0005_multiple_partners.py  0006_applicationmodel.py  0006_auto_20161220_1024.py  0006_gcmdevice_device_uuid.py  0006_webpushdevice.py  0007_auto_20180615_1226.py  0007_gcmdevice_migrate_data.py  0007_uniquesetting.py  0008_fcmdevice.py  0008_gcmdevice_rename_device_uuid.py  0008_webpush_add_edge.py  0009_alter_apnsdevice_device_id.py  0010_alter_gcmdevice_cloud_message_type.py  0010_alter_gcmdevice_options_and_more.py  0011_alter_apnsdevice_registration_id.py  0012_alter_webpushdevice_browser.py
push_notifications/south_migrations/: 0003_auto__add_field_apnsdevice_app_id.py
tests/: __init__.py  _mock.py  mock_responses.py  responses.py  runtests.py  settings.py  settings_unique.py  test_admin.py  test_apns_async_models.py  test_apns_async_push_payload.py  test_apns_certfilecheck.py  test_apns_certificates_settings.py  test_apns_models.py  test_apns_push_payload.py  test_app_config.py  test_dict_to_message.py  test_dynamic_settings.py  test_fields.py  test_gcm_push_payload.py  test_legacy_config.py  test_management_commands.py  test_modeldict.py  test_models.py  test_push_payload.py  test_rest_framework.py  test_webpush.py  test_wns.py  tst_unique.py
tests/push_notifications/: test_models.py  test_sending.py  test_validation.py
tests/test_data/: good_revoked.pem  good_with_passwd.pem  without_private.pem
tests/testapp/: models.py
