[metadata]
name = django-push-notifications
version = 1.6.0
description = Send push notifications to mobile devices through GCM, APNS or WNS and to WebPush (Chrome, Firefox and Opera) in Django
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/jazzband/django-push-notifications
download_url = https://github.com/jazzband/django-push-notifications/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 1.11
	Framework :: Django :: 2.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Internet :: WWW/HTTP
	Topic :: System :: Networking

[options]
packages = find:
install_requires =
	apns2>=0.3.0
	pywebpush>=1.3.0
	Django>=1.11

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
