[metadata]
name = django-push-notifications
description = Send push notifications to mobile devices through GCM, APNS or WNS and to WebPush (Chrome, Firefox and Opera) in Django
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/jazzband/django-push-notifications
download_url = https://github.com/jazzband/django-push-notifications/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Topic :: Internet :: WWW/HTTP
	Topic :: System :: Networking

[options]
python_requires = >= 3.7
packages = find:
install_requires =
	Django>=2.2

setup_requires =
	setuptools_scm

[options.extras_require]
APNS =
	apns2>=0.3.0
	importlib-metadata;python_version < "3.8"
	Django>=2.2

WP = pywebpush>=1.3.0

apns-async = aioapns>=3.1,<4.0

FCM = firebase-admin>=6.2
APNS_ASYNC = aioapns>=3.1,<4.0


[options.packages.find]
exclude = tests
